# spda

./: .dockerignore  .env.sample  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  wait_for_it.sh
docker/: Dockerfile  README.md
spda/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/accounts/: urls.py  views.py
src/accounts/migrations/: 0003_alter_activation_id.py
src/content/assets/css/: styles.css
src/content/templates/engine/: application_confirm_delete.html  application_create_form.html  application_list.html  application_update_form.html
src/content/templates/layouts/default/: page.html
src/engine/: models.py  urls.py  views.py
src/engine/migrations/: 0001_initial.py
src/fixtures/: user.json
src/spda/: asgi.py  settings.py  urls.py  wsgi.py
