[tool.poetry]
name = "spda-uni"
version = "0.1.0"
description = ""
authors = ["Max Kureykin <maxitoshs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
